--- a/Neutral/templates/index.html
+++ b/Neutral/templates/index.html
@@ -11,9 +11,9 @@
         {% endblock %}
     </head>
     <body>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-        <script src="static/testchart.js"></script>
-        {% block body %}    
-        {% endblock %}
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>      
+    {% block body %}  
+    {% endblock %}
     </body>
 </html>
