--- a/Neutral/templates/chartBreakdown.html
+++ b/Neutral/templates/chartBreakdown.html
@@ -37,41 +37,43 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
         <div class="container-lg bg-dark">
-            <div class="ct-chart ct-meal ct-perfect-fourth"></div>
+            <div class="ct-chart ct-square" id ="mealChart"></div>
         </div>
         <script type="text/javascript">
             var Mvalues = {{ Mvalues|tojson }};
             var Meal_data = {labels:['Breakfast', 'Lunch', 'Dinner','Snacks'],
                         series: Mvalues};
             var Meal_options = {
+                height:'500px',
+                width:'1100px', 
                 total: 100,
                 donut: true,
                 donutWidth: '60%',
                 showLabel:true,
                 labelPosition:'outside'
             };
-            new Chartist.Pie('.ct-meal', Meal_data, Meal_options);
+            new Chartist.Pie('#mealChart', Meal_data, Meal_options);
         </script>
     </div>
 
     <div class="carousel-item">
         <div class="container-lg bg-dark">
-            <div class="ct-chart ct-nutrition ct-perfect-fourth"></div>
+            <div class="ct-chart ct-square" id="nutritionChart"></div>
         </div>
         <script type="text/javascript">
             var Nvalues = {{ Nvalues|tojson }};
             var data = {labels:['Carbohydrates', 'Protein', 'Fats'],
                         series: Nvalues};
             var options = {
-                height: '60%',
-                width:'60%',
+                height:'500px',
+                width:'1100px',
                 total: 100,
                 donut: true,
                 donutWidth: '60%',
                 showLabel:true,
                 labelPosition:'outside'
             };
-            new Chartist.Pie('.ct-nutrition', data, options);
+            new Chartist.Pie('#nutritionChart', data, options);
         </script>
     </div>
   </div>
@@ -84,7 +86,6 @@
   <a class="carousel-control-next" href="#breakdown" data-slide="next">
     <span class="carousel-control-next-icon"></span>
   </a>
-
 </div>
 
 
