--- a/Neutral/templates/charts.html
+++ b/Neutral/templates/charts.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'chartIndex.html' %}
 
 {% block head %}
 <title>fucking flask piece of crap</title>
@@ -32,9 +32,9 @@
     <div class="ct-chart ct-perfect-fourth"></div>
 </div>
 <script type="text/javascript">
-    var values = {{ values|tojson }};
+    var values = {{ Mvalues|tojson }};
     var data = {labels:['Breakfast', 'Lunch', 'Dinner'],
-                series: values};
+                series: Mvalues};
     var options = {
         total: 100,
         donut: true,
