--- a/Neutral/templates/login.html
+++ b/Neutral/templates/login.html
@@ -1,3 +1,76 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 <script src="static/testchart.js"></script>
-<canvas id="chDonut1"></canvas>
+<canvas id="chDonut1"></canvas>-->
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Login</title>
+        <link rel="stylesheet" href="static/login.css">
+        <body>
+            <div class="title"> 
+                <img src="static/background-black.png" class="background-black">
+                
+                <img class="logo" src="static/logo.png">
+
+                <!--<h1>NEUTRAL</h1>-->
+                <p>NEUTRAL is a comprehensive food and fitness manager<br>that makes it easy for you to track your food and exercise<br> as well as maintain a healthy nutritional balance.</p>
+                <h2>Food, Fitness and Fun, Let’s Get It Done!</h2>
+            </div>
+            <div class="loginbox">
+                <form method = "POST" action="">
+                    {{ form.hidden_tag() }}
+                    <img src="static/avatar.png" class="avatar">
+                        <h1>Login</h1>
+                        <div class="form-group">
+                            {{ form.email.label(class="form-control-label")}} <!--prints out the email label--> 
+                            {% if form.email.errors %}
+                                {{ form.email(class="form-control form-control-lg is-invalid")}}
+                                <div class='invalid-feedback'>
+                                    {% for error in form.email.errors %}
+                                        <span>
+                                            {{ error }}
+                                        </span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.email(class="form-control form-control-lg", placeholder="Enter your email")}} <!--prints out the email field--> 
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            {{ form.password.label(class="form-control-label")}} <!--prints out the password label--> 
+                            {% if form.password.errors %}
+                                {{ form.password(class="form-control form-control-lg is-invalid")}}
+                                <div class='invalid-feedback'>
+                                    {% for error in form.email.errors %}
+                                        <span>
+                                            {{ error }}
+                                        </span>
+                                    {% endfor %}
+                                </div>
+                            {% else %}
+                                {{ form.password(class="form-control form-control-lg", placeholder="Enter your password")}} <!--prints out the email field--> 
+                            {% endif %}
+                        </div>
+                        <div class="form-group">
+                            <small class="text-muted ml-4">
+                                <a href="{{ url_for('reset_request') }}">Forget Password?</a>
+                            </small>
+                            <div class="form-check">
+                                {{ form.remember(class="form-check-input") }} {{ form.remember.label(class="form-check-label") }}
+                            </div>
+                            {{ form.submit(class="btn btn-outline-info") }}
+                        </div>
+                        <div class="need-account">
+                            <small class="text-muted">
+                                Need an Account? <a class=" ml-5" href="{{ url_for('register') }}">Sign Up Here!</a>
+                            </small>
+                        </div> 
+                </form>               
+            </div>           
+        </body>
+</html>
+
+    
+
