--- a/Neutral/templates/foodreco.html
+++ b/Neutral/templates/foodreco.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Tick if you like the food!</h1>
-    <form action = "http://localhost:5000/foodreco" method = "POST">
+    <form action = "oodreco" method = "POST">
         {% for name in names_list %}
             {{name}}
             <input type = "checkbox" value = "{{loop.index}}" name="mycheckbox">
