added home to route

--- a/Neutral/templates/diary.html
+++ b/Neutral/templates/diary.html
@@ -15,7 +15,7 @@
   <div class="row"></div>
       <h1 class="text-center">Food Intake Breakdowns</h1>
         <div class="col center-block text-center">
-          <form action="{{ url_for('breakdown') }}" method="post">
+          <form action="{{ url_for('diary') }}" method="post">
           <input type="submit" name="action" value="Nutrients"class="btn btn-primary btn-lg active">
           <input type="submit" name="action" value="Calories" class="btn btn-primary btn-lg active">
           </form>
