--- a/Neutral/templates/layout.html
+++ b/Neutral/templates/layout.html
@@ -27,7 +27,7 @@
                 <li><a href="{{ url_for('home') }}"><img class='img-valign' src="static/home.png"/>Home</a></li>
                 <li><a href='#'><img class='img-valign' src="static/food.png"/> Food</a>
                   <ul>
-                    <li><a href="#">Diary</a></li> <!--put in the link to the page at where the # is-->
+                    <li><a href=""{{ url_for('diary') }}"">Diary</a></li> <!--put in the link to the page at where the # is-->
                     <li><a href="#">Search Food</a></li>
                     <li><a href="#">Recommend Food</a></li>
                   </ul>
