--- a/Neutral/templates/foodRecord.html
+++ b/Neutral/templates/foodRecord.html
@@ -5,7 +5,7 @@
 {% block styles %}
 {{super()}}
 <link rel="stylesheet"
-      href="{{url_for('.static', filename='main.css')}}">
+      href="{{url_for('.static', filename='search.css')}}">
 {% endblock %}
 
 {% block content %}
