--- a/Neutral/static/main.css
+++ b/Neutral/static/main.css
@@ -9,6 +9,7 @@ html{
     font-family: 'Rockwell', sans-serif;
 }
 
+
 body{
     overflow-x: hidden;
 }
@@ -76,7 +77,7 @@ nav ul li{
     animation: slideIn .5s forwards;
 }
 
-/*nav ul li:nth-child(1){
+nav ul li:nth-child(1){
     animation-delay: 0s;
 }
 
@@ -170,7 +171,6 @@ nav ul li img{
     height:20px;
     width:20px;
 }
-
 
 
 
