--- a/Neutral/templates/searchFood.html
+++ b/Neutral/templates/searchFood.html
@@ -3,8 +3,9 @@
 
 {% block styles %}
 {{super()}}
-<link rel="stylesheet"
-      href="{{url_for('.static', filename='main.css')}}">
+<meta charset="utf-8">
+        <title>Search Food</title>
+        <link rel="stylesheet" href="static/search.css">
 {% endblock %}
 
 {% block content %}
