--- a/Neutral/static/search.css
+++ b/Neutral/static/search.css
@@ -8,16 +8,14 @@ body {
   .first-row{
      margin-top:20px;
   }
-  .table{
-      width:100%;
-  }
   
-  .results{
+  .card{
       background-color:white;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       border-radius: 15px;
       padding: 10px;
       margin-top: 20px;
+      
   }
   .results-row{
       background-color:#ccffe6;
