added changes to foodrecord

--- a/Neutral/templates/foodRecord.html
+++ b/Neutral/templates/foodRecord.html
@@ -6,15 +6,17 @@
 {{super()}}
 <meta charset="utf-8">
         <title>Food Record</title>
-        <link rel="stylesheet" href="../static/search.css">
+        <link rel="stylesheet"
+        href="{{url_for('.static', filename='search.css')}}">
+ 
         
 {% endblock %}
 
 {% block content %}
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <!-- Edit Modal -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>    
+<!-- Edit Modal -->
     <div class="modal fade" id="editmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -74,6 +76,15 @@
         </div>
         </div>
     </div>
+    <div class="container background" style="margin-top:3rem">
+        <div class="date-buttons center-block text-center">
+          <button type="button" class="btn btn-primary" id = 'dateminus'><i class="fa fa-angle-left"></i> <span class="glyphicon glyphicon-chevron-left"></span></button>
+          <a href="#" class="btn btn-primary">DATE</a>
+          <button type="button" class="btn btn-primary" id = 'dateplus'><i class="fa fa-angle-right"></i> <span class="glyphicon glyphicon-chevron-right"></span></button>
+        </div>
+    </div>
+        
+    </div>
     <div class="container">
         <div class="row">
             <div class="results">
@@ -83,30 +94,30 @@
                     <caption>Breakfast <button class="btn btn-primary addtbtn" id="add">Breakfast <span class="glyphicon glyphicon-plus-sign"></span></button></caption>
                     <thead>
                         <tr class="table-primary">
-                            <th scope="col">ID</th>
-                            <th scope="col">Food Name</th>
-                            <th scope="col">Calories</th>
-                            <th scope="col">Carb</th>
-                            <th scope="col">Fat</th>
-                            <th scope="col">Saturated Fat</th>
-                            <th scope="col">Protein</th>
-                            <th scope="col">Sodium</th>
-                            <th scope="col">Fibres</th>
-                            <th scope="col">Action</th>
+                            <th scope="col" style = 'text-align:left'>ID</th>
+                            <th scope="col" width = '350px' style = 'text-align:left'>Food Name</th>
+                            <th scope="col" style = 'text-align:center'>Calories</th>
+                            <th scope="col" style = 'text-align:center'>Carb</th>
+                            <th scope="col" style = 'text-align:center'>Fat</th>
+                            <th scope="col" style = 'text-align:center'>Saturated Fat</th>
+                            <th scope="col" style = 'text-align:center'>Protein</th>
+                            <th scope="col" style = 'text-align:center'>Sodium</th>
+                            <th scope="col" style = 'text-align:center'>Fibres</th>
+                            <th scope="col" style = 'text-align:left'>Action</th>
                         </tr>
                     </thead>
                     {% for food in food_list_breakfast %}
                     <tbody>
                         <tr class="results-row">
                             <th scope="row">{{food.foodrecord_id}}</th>
-                            <th scope="row">{{food.food_name}}</th>
-                            <td>{{food.food_calories}}</td>
-                            <td>{{food.food_carb}}</td>
-                            <td>{{food.food_fat}}</td>
-                            <td>{{food.food_saturatedfat}}</td>
-                            <td>{{food.food_protein}}</td>
-                            <td>{{food.food_sodium}}</td>
-                            <td>{{food.food_fibres}}</td>
+                            <td style = 'text-align:left' class='font-weight-bold'>{{food.food_name}}</th>
+                            <td style = 'text-align:center'>{{food.food_calories}}</td>
+                            <td style = 'text-align:center'>{{food.food_carb}}</td>
+                            <td style = 'text-align:center'>{{food.food_fat}}</td>
+                            <td style = 'text-align:center'>{{food.food_saturatedfat}}</td>
+                            <td style = 'text-align:center'>{{food.food_protein}}</td>
+                            <td style = 'text-align:center'>{{food.food_sodium}}</td>
+                            <td style = 'text-align:center'>{{food.food_fibres}}</td>
                             <td class = "text-right"><button class="btn btn-primary editbtn" style = "width:40px;" data-toggle="editmodal" data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
                                                      <button class="btn btn-primary deletebtn" style = "width:40px;" id = "delete"><span class="glyphicon glyphicon-trash"></span></button></td>
                         </tr>
@@ -128,31 +139,31 @@
                     <caption>Lunch <button class="btn btn-primary addtbtn" id="add">Lunch <span class="glyphicon glyphicon-plus-sign"></span></button></caption>
                     <thead>
                         <tr class="table-primary">
-                            <th scope="col" >ID</th>
-                            <th scope="col">Food Name</th>
-                            <th scope="col">Calories</th>
-                            <th scope="col">Carb</th>
-                            <th scope="col">Fat</th>
-                            <th scope="col">Saturated Fat</th>
-                            <th scope="col">Protein</th>
-                            <th scope="col">Sodium</th>
-                            <th scope="col">Fibres</th>
-                            <th scope="col">Action</th>
+                            <th scope="col" style = 'text-align:left'>ID</th>
+                            <th scope="col" width = '350px' style = 'text-align:left'>Food Name</th>
+                            <th scope="col" style = 'text-align:center'>Calories</th>
+                            <th scope="col" style = 'text-align:center'>Carb</th>
+                            <th scope="col" style = 'text-align:center'>Fat</th>
+                            <th scope="col" style = 'text-align:center'>Saturated Fat</th>
+                            <th scope="col" style = 'text-align:center'>Protein</th>
+                            <th scope="col" style = 'text-align:center'>Sodium</th>
+                            <th scope="col" style = 'text-align:center'>Fibres</th>
+                            <th scope="col" style = 'text-align:left'>Action</th>
                         </tr>
                     </thead>
                     {% for food in food_list_lunch %}
                     <tbody>
                         <tr class="results-row">
-                            <th scope="row" >{{food.foodrecord_id}}</th>
-                            <th scope="row">{{food.food_name}}</th>
-                            <td>{{food.food_calories}}</td>
-                            <td>{{food.food_carb}}</td>
-                            <td>{{food.food_fat}}</td>
-                            <td>{{food.food_saturatedfat}}</td>
-                            <td>{{food.food_protein}}</td>
-                            <td>{{food.food_sodium}}</td>
-                            <td>{{food.food_fibres}}</td>
-                            <td class = "text-right"><button class="btn btn-primary editbtn" style = "width:40px;" data-toggle="editmodal" data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
+                            <th scope="row">{{food.foodrecord_id}}</th>
+                            <td style = 'text-align:left' class='font-weight-bold'>{{food.food_name}}</th>
+                            <td style = 'text-align:center'>{{food.food_calories}}</td>
+                            <td style = 'text-align:center'>{{food.food_carb}}</td>
+                            <td style = 'text-align:center'>{{food.food_fat}}</td>
+                            <td style = 'text-align:center'>{{food.food_saturatedfat}}</td>
+                            <td style = 'text-align:center'>{{food.food_protein}}</td>
+                            <td style = 'text-align:center'>{{food.food_sodium}}</td>
+                            <td style = 'text-align:center'>{{food.food_fibres}}</td>
+                            <td class = "text-right"><button class="btn btn-primary editbtn" style = "width:40px;"  data-toggle="editmodal" data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
                                                      <button class="btn btn-primary deletebtn" style = "width:40px;" id = "delete"><span class="glyphicon glyphicon-trash"></span></button></td>
                         </tr>
                     </tbody>
@@ -174,30 +185,30 @@
                     <caption>Dinner <button class="btn btn-primary addtbtn" id="add">Dinner <span class="glyphicon glyphicon-plus-sign"></span></button></caption>
                     <thead>
                         <tr class="table-primary">
-                            <th scope="col">ID</th>
-                            <th scope="col">Food Name</th>
-                            <th scope="col">Calories</th>
-                            <th scope="col">Carb</th>
-                            <th scope="col">Fat</th>
-                            <th scope="col">Saturated Fat</th>
-                            <th scope="col">Protein</th>
-                            <th scope="col">Sodium</th>
-                            <th scope="col">Fibres</th>
-                            <th scope="col">Action</th>
+                            <th scope="col" style = 'text-align:left'>ID</th>
+                            <th scope="col" width = '350px' style = 'text-align:left'>Food Name</th>
+                            <th scope="col" style = 'text-align:center'>Calories</th>
+                            <th scope="col" style = 'text-align:center'>Carb</th>
+                            <th scope="col" style = 'text-align:center'>Fat</th>
+                            <th scope="col" style = 'text-align:center'>Saturated Fat</th>
+                            <th scope="col" style = 'text-align:center'>Protein</th>
+                            <th scope="col" style = 'text-align:center'>Sodium</th>
+                            <th scope="col" style = 'text-align:center'>Fibres</th>
+                            <th scope="col" style = 'text-align:left'>Action</th>
                         </tr>
                     </thead>
                     {% for food in food_list_dinner %}
                     <tbody>
                         <tr class="results-row">
                             <th scope="row">{{food.foodrecord_id}}</th>
-                            <th scope="row">{{food.food_name}}</th>
-                            <td>{{food.food_calories}}</td>
-                            <td>{{food.food_carb}}</td>
-                            <td>{{food.food_fat}}</td>
-                            <td>{{food.food_saturatedfat}}</td>
-                            <td>{{food.food_protein}}</td>
-                            <td>{{food.food_sodium}}</td>
-                            <td>{{food.food_fibres}}</td>
+                            <td style = 'text-align:left' class='font-weight-bold'>{{food.food_name}}</th>
+                            <td style = 'text-align:center'>{{food.food_calories}}</td>
+                            <td style = 'text-align:center'>{{food.food_carb}}</td>
+                            <td style = 'text-align:center'>{{food.food_fat}}</td>
+                            <td style = 'text-align:center'>{{food.food_saturatedfat}}</td>
+                            <td style = 'text-align:center'>{{food.food_protein}}</td>
+                            <td style = 'text-align:center'>{{food.food_sodium}}</td>
+                            <td style = 'text-align:center'>{{food.food_fibres}}</td>
                             <td class = "text-right"><button class="btn btn-primary editbtn" style = "width:40px;"  data-toggle="editmodal" data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
                                                      <button class="btn btn-primary deletebtn" style = "width:40px;" id = "delete"><span class="glyphicon glyphicon-trash"></span></button></td>
                         </tr>
@@ -219,30 +230,30 @@
                     <caption>Snack <button class="btn btn-primary addtbtn" id="add">Snack <span class="glyphicon glyphicon-plus-sign"></span></button></caption>
                     <thead>
                         <tr class="table-primary">
-                            <th scope="col">ID</th>
-                            <th scope="col">Food Name</th>
-                            <th scope="col">Calories</th>
-                            <th scope="col">Carb</th>
-                            <th scope="col">Fat</th>
-                            <th scope="col">Saturated Fat</th>
-                            <th scope="col">Protein</th>
-                            <th scope="col">Sodium</th>
-                            <th scope="col">Fibres</th>
-                            <th scope="col">Action</th>
+                            <th scope="col" style = 'text-align:left'>ID</th>
+                            <th scope="col" width = '350px'>Food Name</th>
+                            <th scope="col" style = 'text-align:center'>Calories</th>
+                            <th scope="col" style = 'text-align:center'>Carb</th>
+                            <th scope="col" style = 'text-align:center'>Fat</th>
+                            <th scope="col" style = 'text-align:center'>Saturated Fat</th>
+                            <th scope="col" style = 'text-align:center'>Protein</th>
+                            <th scope="col" style = 'text-align:center'>Sodium</th>
+                            <th scope="col" style = 'text-align:center'>Fibres</th>
+                            <th scope="col" style = 'text-align:left'>Action</th>
                         </tr>
                     </thead>
                     {% for food in food_list_snack %}
                     <tbody>
                         <tr class="results-row">
                             <th scope="row">{{food.foodrecord_id}}</th>
-                            <th scope="row">{{food.food_name}}</th>
-                            <td>{{food.food_calories}}</td>
-                            <td>{{food.food_carb}}</td>
-                            <td>{{food.food_fat}}</td>
-                            <td>{{food.food_saturatedfat}}</td>
-                            <td>{{food.food_protein}}</td>
-                            <td>{{food.food_sodium}}</td>
-                            <td>{{food.food_fibres}}</td>
+                            <td style = 'text-align:left' class='font-weight-bold'>{{food.food_name}}</th>
+                            <td style = 'text-align:center'>{{food.food_calories}}</td>
+                            <td style = 'text-align:center'>{{food.food_carb}}</td>
+                            <td style = 'text-align:center'>{{food.food_fat}}</td>
+                            <td style = 'text-align:center'>{{food.food_saturatedfat}}</td>
+                            <td style = 'text-align:center'>{{food.food_protein}}</td>
+                            <td style = 'text-align:center'>{{food.food_sodium}}</td>
+                            <td style = 'text-align:center'>{{food.food_fibres}}</td>
                             <td class = "text-right"><button class="btn btn-primary editbtn" style = "width:40px;" data-toggle="editmodal" data-target="#edit"><span class="glyphicon glyphicon-pencil"></span></button>
                                                      <button class="btn btn-primary deletebtn" style = "width:40px;" id = "delete"><span class="glyphicon glyphicon-trash"></span></button></td>
                         </tr>
@@ -270,7 +281,7 @@
            $('.deletebtn').on('click', function(){
                 $tr = $(this).closest('tr');
                 var foodrecord_id = $tr.find('th').text();
-                var data = '/deletefoodrecord/' +foodrecord_id[0];
+                var data = '/deletefoodrecord/' +foodrecord_id;
                 window.location.replace(data);
             });
         </script>
@@ -287,15 +298,15 @@
                 console.log(data);
 
                 var foodrecord_id = $tr.find('th').text();
-                var food_calories = $tr.find('td:eq(0)').text();
-                var food_carb = $tr.find('td:eq(1)').text();
-                var food_fat = $tr.find('td:eq(2)').text();
-                var food_saturatedfat = $tr.find('td:eq(3)').text();
-                var food_protein = $tr.find('td:eq(4)').text();
-                var food_sodium = $tr.find('td:eq(5)').text();
-                var food_fibres = $tr.find('td:eq(6)').text();
+                var food_calories = $tr.find('td:eq(1)').text();
+                var food_carb = $tr.find('td:eq(2)').text();
+                var food_fat = $tr.find('td:eq(3)').text();
+                var food_saturatedfat = $tr.find('td:eq(4)').text();
+                var food_protein = $tr.find('td:eq(5)').text();
+                var food_sodium = $tr.find('td:eq(6)').text();
+                var food_fibres = $tr.find('td:eq(7)').text();
 
-                $('#foodrecord_id').val(foodrecord_id[0]);
+                $('#foodrecord_id').val(foodrecord_id);
                 $('#calories').val(food_calories);
                 $('#carb').val(food_carb);
                 $('#fat').val(food_fat);
@@ -303,9 +314,6 @@
                 $('#protein').val(food_protein);
                 $('#sodium').val(food_sodium);
                 $('#fibres').val(food_fibres);
-
-                alert(food_calories)
-
             });
         </script>
         <script>
