--- a/Neutral/static/search.css
+++ b/Neutral/static/search.css
@@ -8,15 +8,51 @@ body {
   .first-row{
      margin-top:20px;
   }
+  table{
+      width:100%;
+  }
+  th{
+      width: 10%;
   
-  .card{
+  }
+  
+  .results{
       background-color:white;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       border-radius: 15px;
       padding: 10px;
       margin-top: 20px;
-      
   }
   .results-row{
       background-color:#ccffe6;
+  }
+  
+  body {
+    background-color: #FFFAF0;
+  }
+  
+    .date-buttons{
+      margin-bottom:10px;
+    }
+    .food-intake{
+      margin-bottom:5px;
+    }
+    .ct-label {
+      font-size: 1.5em;
+      color:black;
+      fill:black;
+  }
+  
+  
+    .ct-series-a .ct-slice-donut {
+    stroke: rgb(100, 100, 233);
+  }
+    .ct-series-b .ct-slice-donut {
+    stroke: rgb(100, 233, 155);
+  }
+    .ct-series-d .ct-slice-donut {
+    stroke: rgb(253, 206, 77);
+  }
+    .ct-series-c .ct-slice-donut {
+    stroke: rgb(235, 76, 76);
   }
