--- a/Neutral/static/register.css
+++ b/Neutral/static/register.css
@@ -4,22 +4,36 @@ body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: url("static/background.jpg") no-repeat center fixed;
+    background: url("background.jpg") no-repeat center fixed;
     background-size: cover;
+    background-color: black;
+}
+
+.button-spacing{
+    margin-top: 10px;
+}
+
+.drop-dow-spacing{
+    margin:0px;
+}
+
+.healthgoal-spacing{
+    margin-bottom: 10px;
 }
 
 .loginbox{
     width: 400px;
-    height: 500px;
+    height: 800px;
     background: rgb(44, 155, 136);
     color: #fff;
     position: absolute;
-    top:50%;
     left:50%;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
     padding: 60px 20px;
     border-radius: 15px 15px 15px 15px;
+    margin-top: 480px;
+    
 }
 
 .avatar{
@@ -35,7 +49,7 @@ h1{
     margin:0;
     padding: 0 0 10px;
     text-align:center;
-    font-size: 22px;
+    font-size: 18px;
     color: black;
     font-weight: bolder;
 }
